# todo-app

./: .gitignore  .taurignore  angular.json  db.sqlite3  diesel.toml  package-lock.json  package.json  tailwind.config.js
migrations/2023-06-26-162444_create_tasks/: up.sql
src/: index.html
src-tauri/: Cargo.toml  db.sqlite3  tauri.conf.json
src-tauri/migrations/2023-06-26-162444_create_tasks/: up.sql
src-tauri/src/: db.rs  db.sqlite3  main.rs  queries.rs  schema.rs
src-tauri/src/Models/: result.rs  state.rs  task.rs
src-tauri/src/models/: result.rs  task.rs
src/app/: app.component.html  app.component.ts  app.module.ts  tasks.service.spec.ts  tasks.service.ts
src/app/Components/date-picker/: date-picker.component.html  date-picker.component.spec.ts  date-picker.component.ts
src/app/Components/day/: day.component.html  day.component.spec.ts  day.component.ts
src/app/Components/task/: task.component.html  task.component.spec.ts  task.component.ts
src/app/Components/task-creation-modal/: task-creation-modal.component.html  task-creation-modal.component.spec.ts  task-creation-modal.component.ts
src/app/Components/task-edit-modal/: task-edit-modal.component.html  task-edit-modal.component.spec.ts  task-edit-modal.component.ts
src/app/Components/task-modal/: task-modal.component.html  task-modal.component.ts
src/app/Models/: Task.ts
